out/SuniasterParser.py
# Generated from Suniaster.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class SuniasterParser ( Parser ):

    grammarFileName = "Suniaster.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'se'", "'ent\\u00E3o'", "'sen\\u00E3o'", 
                     "'fim'", "'enquanto'", "'leia'", "'escreva'", "'verdadeiro'", 
                     "'falso'", "'nulo'", "<INVALID>", "<INVALID>", "<INVALID>", 
                     "<INVALID>", "<INVALID>", "'='", "','", "'('", "')'", 
                     "'['", "']'" ]

    symbolicNames = [ "<INVALID>", "SE", "ENTAO", "SENAO", "FIM", "ENQUANTO", 
                      "LEIA", "ESCREVA", "VERDADEIRO", "FALSO", "NULO", 
                      "TIPO", "ID", "NUM_REAL", "NUM_INT", "STRING", "ATRIB", 
                      "VIRGULA", "ABRE_PAREN", "FECHA_PAREN", "ABRE_COL", 
                      "FECHA_COL", "OP_ARIT_SOMA", "OP_ARIT_MULT", "OP_REL", 
                      "OP_LOG", "WS", "COMENTARIO" ]

    RULE_programa = 0
    RULE_linha = 1
    RULE_declaracao = 2
    RULE_comando = 3
    RULE_condicional = 4
    RULE_bloco = 5
    RULE_repeticao = 6
    RULE_escrita = 7
    RULE_listaArgs = 8
    RULE_atribuicao = 9
    RULE_destino = 10
    RULE_expressao = 11
    RULE_exprLogica = 12
    RULE_exprComparacao = 13
    RULE_exprSoma = 14
    RULE_exprMult = 15
    RULE_exprPrimaria = 16
    RULE_acesso = 17
    RULE_listaLiteral = 18
    RULE_literal = 19

    ruleNames =  [ "programa", "linha", "declaracao", "comando", "condicional", 
                   "bloco", "repeticao", "escrita", "listaArgs", "atribuicao", 
                   "destino", "expressao", "exprLogica", "exprComparacao", 
                   "exprSoma", "exprMult", "exprPrimaria", "acesso", "listaLiteral", 
                   "literal" ]

    EOF = Token.EOF
    SE=1
    ENTAO=2
    SENAO=3
    FIM=4
    ENQUANTO=5
    LEIA=6
    ESCREVA=7
    VERDADEIRO=8
    FALSO=9
    NULO=10
    TIPO=11
    ID=12
    NUM_REAL=13
    NUM_INT=14
    STRING=15
    ATRIB=16
    VIRGULA=17
    ABRE_PAREN=18
    FECHA_PAREN=19
    ABRE_COL=20
    FECHA_COL=21
    OP_ARIT_SOMA=22
    OP_ARIT_MULT=23
    OP_REL=24
    OP_LOG=25
    WS=26
    COMENTARIO=27

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(SuniasterParser.EOF, 0)

        def linha(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SuniasterParser.LinhaContext)
            else:
                return self.getTypedRuleContext(SuniasterParser.LinhaContext,i)


        def getRuleIndex(self):
            return SuniasterParser.RULE_programa

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterPrograma" ):
                listener.enterPrograma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitPrograma" ):
                listener.exitPrograma(self)




    def programa(self):

        localctx = SuniasterParser.ProgramaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_programa)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 43
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 6306) != 0):
                self.state = 40
                self.linha()
                self.state = 45
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 46
            self.match(SuniasterParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class LinhaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def declaracao(self):
            return self.getTypedRuleContext(SuniasterParser.DeclaracaoContext,0)


        def comando(self):
            return self.getTypedRuleContext(SuniasterParser.ComandoContext,0)


        def getRuleIndex(self):
            return SuniasterParser.RULE_linha

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterLinha" ):
                listener.enterLinha(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitLinha" ):
                listener.exitLinha(self)




    def linha(self):

        localctx = SuniasterParser.LinhaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_linha)
        try:
            self.state = 50
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [11]:
                self.enterOuterAlt(localctx, 1)
                self.state = 48
                self.declaracao()
                pass
            elif token in [1, 5, 7, 12]:
                self.enterOuterAlt(localctx, 2)
                self.state = 49
                self.comando()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclaracaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def TIPO(self):
            return self.getToken(SuniasterParser.TIPO, 0)

        def ID(self):
            return self.getToken(SuniasterParser.ID, 0)

        def ATRIB(self):
            return self.getToken(SuniasterParser.ATRIB, 0)

        def expressao(self):
            return self.getTypedRuleContext(SuniasterParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return SuniasterParser.RULE_declaracao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaracao" ):
                listener.enterDeclaracao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaracao" ):
                listener.exitDeclaracao(self)




    def declaracao(self):

        localctx = SuniasterParser.DeclaracaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_declaracao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 52
            self.match(SuniasterParser.TIPO)
            self.state = 53
            self.match(SuniasterParser.ID)
            self.state = 54
            self.match(SuniasterParser.ATRIB)
            self.state = 55
            self.expressao()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ComandoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def condicional(self):
            return self.getTypedRuleContext(SuniasterParser.CondicionalContext,0)


        def repeticao(self):
            return self.getTypedRuleContext(SuniasterParser.RepeticaoContext,0)


        def escrita(self):
            return self.getTypedRuleContext(SuniasterParser.EscritaContext,0)


        def atribuicao(self):
            return self.getTypedRuleContext(SuniasterParser.AtribuicaoContext,0)


        def getRuleIndex(self):
            return SuniasterParser.RULE_comando

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterComando" ):
                listener.enterComando(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitComando" ):
                listener.exitComando(self)




    def comando(self):

        localctx = SuniasterParser.ComandoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_comando)
        try:
            self.state = 61
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [1]:
                self.enterOuterAlt(localctx, 1)
                self.state = 57
                self.condicional()
                pass
            elif token in [5]:
                self.enterOuterAlt(localctx, 2)
                self.state = 58
                self.repeticao()
                pass
            elif token in [7]:
                self.enterOuterAlt(localctx, 3)
                self.state = 59
                self.escrita()
                pass
            elif token in [12]:
                self.enterOuterAlt(localctx, 4)
                self.state = 60
                self.atribuicao()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SE(self):
            return self.getToken(SuniasterParser.SE, 0)

        def expressao(self):
            return self.getTypedRuleContext(SuniasterParser.ExpressaoContext,0)


        def ENTAO(self):
            return self.getToken(SuniasterParser.ENTAO, 0)

        def bloco(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SuniasterParser.BlocoContext)
            else:
                return self.getTypedRuleContext(SuniasterParser.BlocoContext,i)


        def FIM(self):
            return self.getToken(SuniasterParser.FIM, 0)

        def SENAO(self):
            return self.getToken(SuniasterParser.SENAO, 0)

        def getRuleIndex(self):
            return SuniasterParser.RULE_condicional

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterCondicional" ):
                listener.enterCondicional(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitCondicional" ):
                listener.exitCondicional(self)




    def condicional(self):

        localctx = SuniasterParser.CondicionalContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_condicional)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 63
            self.match(SuniasterParser.SE)
            self.state = 64
            self.expressao()
            self.state = 65
            self.match(SuniasterParser.ENTAO)
            self.state = 66
            self.bloco()
            self.state = 69
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==3:
                self.state = 67
                self.match(SuniasterParser.SENAO)
                self.state = 68
                self.bloco()


            self.state = 71
            self.match(SuniasterParser.FIM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BlocoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def linha(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SuniasterParser.LinhaContext)
            else:
                return self.getTypedRuleContext(SuniasterParser.LinhaContext,i)


        def getRuleIndex(self):
            return SuniasterParser.RULE_bloco

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBloco" ):
                listener.enterBloco(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBloco" ):
                listener.exitBloco(self)




    def bloco(self):

        localctx = SuniasterParser.BlocoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_bloco)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 76
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 6306) != 0):
                self.state = 73
                self.linha()
                self.state = 78
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class RepeticaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ENQUANTO(self):
            return self.getToken(SuniasterParser.ENQUANTO, 0)

        def expressao(self):
            return self.getTypedRuleContext(SuniasterParser.ExpressaoContext,0)


        def ENTAO(self):
            return self.getToken(SuniasterParser.ENTAO, 0)

        def bloco(self):
            return self.getTypedRuleContext(SuniasterParser.BlocoContext,0)


        def FIM(self):
            return self.getToken(SuniasterParser.FIM, 0)

        def getRuleIndex(self):
            return SuniasterParser.RULE_repeticao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterRepeticao" ):
                listener.enterRepeticao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitRepeticao" ):
                listener.exitRepeticao(self)




    def repeticao(self):

        localctx = SuniasterParser.RepeticaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_repeticao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 79
            self.match(SuniasterParser.ENQUANTO)
            self.state = 80
            self.expressao()
            self.state = 81
            self.match(SuniasterParser.ENTAO)
            self.state = 82
            self.bloco()
            self.state = 83
            self.match(SuniasterParser.FIM)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class EscritaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ESCREVA(self):
            return self.getToken(SuniasterParser.ESCREVA, 0)

        def ABRE_PAREN(self):
            return self.getToken(SuniasterParser.ABRE_PAREN, 0)

        def FECHA_PAREN(self):
            return self.getToken(SuniasterParser.FECHA_PAREN, 0)

        def listaArgs(self):
            return self.getTypedRuleContext(SuniasterParser.ListaArgsContext,0)


        def getRuleIndex(self):
            return SuniasterParser.RULE_escrita

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterEscrita" ):
                listener.enterEscrita(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitEscrita" ):
                listener.exitEscrita(self)




    def escrita(self):

        localctx = SuniasterParser.EscritaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_escrita)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 85
            self.match(SuniasterParser.ESCREVA)
            self.state = 86
            self.match(SuniasterParser.ABRE_PAREN)
            self.state = 88
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1373952) != 0):
                self.state = 87
                self.listaArgs()


            self.state = 90
            self.match(SuniasterParser.FECHA_PAREN)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ListaArgsContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expressao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SuniasterParser.ExpressaoContext)
            else:
                return self.getTypedRuleContext(SuniasterParser.ExpressaoContext,i)


        def VIRGULA(self, i:int=None):
            if i is None:
                return self.getTokens(SuniasterParser.VIRGULA)
            else:
                return self.getToken(SuniasterParser.VIRGULA, i)

        def getRuleIndex(self):
            return SuniasterParser.RULE_listaArgs

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterListaArgs" ):
                listener.enterListaArgs(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitListaArgs" ):
                listener.exitListaArgs(self)




    def listaArgs(self):

        localctx = SuniasterParser.ListaArgsContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_listaArgs)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.expressao()
            self.state = 97
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==17:
                self.state = 93
                self.match(SuniasterParser.VIRGULA)
                self.state = 94
                self.expressao()
                self.state = 99
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AtribuicaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def destino(self):
            return self.getTypedRuleContext(SuniasterParser.DestinoContext,0)


        def ATRIB(self):
            return self.getToken(SuniasterParser.ATRIB, 0)

        def expressao(self):
            return self.getTypedRuleContext(SuniasterParser.ExpressaoContext,0)


        def getRuleIndex(self):
            return SuniasterParser.RULE_atribuicao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAtribuicao" ):
                listener.enterAtribuicao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAtribuicao" ):
                listener.exitAtribuicao(self)




    def atribuicao(self):

        localctx = SuniasterParser.AtribuicaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_atribuicao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 100
            self.destino()
            self.state = 101
            self.match(SuniasterParser.ATRIB)
            self.state = 102
            self.expressao()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DestinoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(SuniasterParser.ID, 0)

        def ABRE_COL(self):
            return self.getToken(SuniasterParser.ABRE_COL, 0)

        def expressao(self):
            return self.getTypedRuleContext(SuniasterParser.ExpressaoContext,0)


        def FECHA_COL(self):
            return self.getToken(SuniasterParser.FECHA_COL, 0)

        def getRuleIndex(self):
            return SuniasterParser.RULE_destino

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDestino" ):
                listener.enterDestino(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDestino" ):
                listener.exitDestino(self)




    def destino(self):

        localctx = SuniasterParser.DestinoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_destino)
        try:
            self.state = 110
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,7,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 104
                self.match(SuniasterParser.ID)
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 105
                self.match(SuniasterParser.ID)
                self.state = 106
                self.match(SuniasterParser.ABRE_COL)
                self.state = 107
                self.expressao()
                self.state = 108
                self.match(SuniasterParser.FECHA_COL)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExpressaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprLogica(self):
            return self.getTypedRuleContext(SuniasterParser.ExprLogicaContext,0)


        def getRuleIndex(self):
            return SuniasterParser.RULE_expressao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExpressao" ):
                listener.enterExpressao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExpressao" ):
                listener.exitExpressao(self)




    def expressao(self):

        localctx = SuniasterParser.ExpressaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_expressao)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 112
            self.exprLogica()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprLogicaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprComparacao(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SuniasterParser.ExprComparacaoContext)
            else:
                return self.getTypedRuleContext(SuniasterParser.ExprComparacaoContext,i)


        def OP_LOG(self, i:int=None):
            if i is None:
                return self.getTokens(SuniasterParser.OP_LOG)
            else:
                return self.getToken(SuniasterParser.OP_LOG, i)

        def getRuleIndex(self):
            return SuniasterParser.RULE_exprLogica

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprLogica" ):
                listener.enterExprLogica(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprLogica" ):
                listener.exitExprLogica(self)




    def exprLogica(self):

        localctx = SuniasterParser.ExprLogicaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_exprLogica)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.exprComparacao()
            self.state = 119
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==25:
                self.state = 115
                self.match(SuniasterParser.OP_LOG)
                self.state = 116
                self.exprComparacao()
                self.state = 121
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprComparacaoContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprSoma(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SuniasterParser.ExprSomaContext)
            else:
                return self.getTypedRuleContext(SuniasterParser.ExprSomaContext,i)


        def OP_REL(self, i:int=None):
            if i is None:
                return self.getTokens(SuniasterParser.OP_REL)
            else:
                return self.getToken(SuniasterParser.OP_REL, i)

        def getRuleIndex(self):
            return SuniasterParser.RULE_exprComparacao

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprComparacao" ):
                listener.enterExprComparacao(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprComparacao" ):
                listener.exitExprComparacao(self)




    def exprComparacao(self):

        localctx = SuniasterParser.ExprComparacaoContext(self, self._ctx, self.state)
        self.enterRule(localctx, 26, self.RULE_exprComparacao)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 122
            self.exprSoma()
            self.state = 127
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==24:
                self.state = 123
                self.match(SuniasterParser.OP_REL)
                self.state = 124
                self.exprSoma()
                self.state = 129
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprSomaContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def exprMult(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(SuniasterParser.ExprMultContext)
            else:
                return self.getTypedRuleContext(SuniasterParser.ExprMultContext,i)


        def OP_ARIT_SOMA(self, i:int=None):
            if i is None:
                return self.getTokens(SuniasterParser.OP_ARIT_SOMA)
            else:
                return self.getToken(SuniasterParser.OP_ARIT_SOMA, i)

        def getRuleIndex(self):
            return SuniasterParser.RULE_exprSoma

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprSoma" ):
                listener.enterExprSoma(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprSoma" ):
                listener.exitExprSoma(self)




    def exprSoma(self):

        localctx = SuniasterParser.ExprSomaContext(self, self._ctx, self.state)
        self.enterRule(localctx, 28, self.RULE_exprSoma)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 130
            self.exprMult()
            self.state = 135
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==22:
                self.state = 131
                self.match(SuniasterParser.OP_ARIT_SOMA)
                self.state = 132
                self.exprMult()
                self.state = 137
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
